// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry:resource/create - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use this skill for Microsoft Foundry (Azure AI Foundry): deploy models from catalog, build RAG apps, create/evaluate AI agents, manage RBAC/permissions, manage quotas/capacity, create Foundry resources.
USE FOR: Microsoft Foundry, AI Foundry, deploy model, deploy GPT, OpenAI model, model catalog, RAG, knowledge index, create agent, evaluate agent, agent monitoring, create Foundry project, set up Foundry, onboard Foundry, provision Foundry, create Foundry resource, AI Services, AIServices kind, register resource provider, RBAC, role assignment, managed identity, service principal, permissions, quota, capacity, TPM, PTU, QuotaExceeded, InsufficientQuota, DeploymentLimitReached, check quota, monitor quota, quota increase, first model deployment, model deployment. FOR TROUBLESHOOTING: rate limiting, 429 errors, quota issues, deployment health, inference failures, model availability, regional availability.
DO NOT USE FOR: Azure Functions (use azure-functions), App Service (use azure-create-app), generic Azure resource creation (use azure-create-app), AI Search queries (use azure-ai), speech-to-text (use azure-ai), OCR (use azure-ai).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "aiservices",
    "apps",
    "assignment",
    "authentication",
    "availability",
    "azure",
    "azure-ai",
    "azure-create-app",
    "azure-functions",
    "build",
    "capacity",
    "catalog",
    "check",
    "cli",
    "create",
    "creation",
    "deploy",
    "deployment",
    "deploymentlimitreached",
    "diagnostic",
    "entra",
    "errors",
    "evaluate",
    "failures",
    "first",
    "foundry",
    "from",
    "function",
    "functions",
    "generic",
    "health",
    "identity",
    "increase",
    "index",
    "inference",
    "insufficientquota",
    "issues",
    "kind",
    "knowledge",
    "limiting",
    "manage",
    "managed",
    "mcp",
    "microsoft",
    "model",
    "models",
    "monitor",
    "monitoring",
    "onboard",
    "openai",
    "permissions",
    "principal",
    "project",
    "provider",
    "provision",
    "queries",
    "quota",
    "quotaexceeded",
    "quotas",
    "rate",
    "rbac",
    "regional",
    "register",
    "resource",
    "resources",
    "role",
    "search",
    "service",
    "services",
    "skill",
    "speech-to-text",
    "this",
    "troubleshooting",
  ],
}
`;

exports[`microsoft-foundry:resource/create - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "aiservices",
  "apps",
  "assignment",
  "authentication",
  "availability",
  "azure",
  "azure-ai",
  "azure-create-app",
  "azure-functions",
  "build",
  "capacity",
  "catalog",
  "check",
  "cli",
  "create",
  "creation",
  "deploy",
  "deployment",
  "deploymentlimitreached",
  "diagnostic",
  "entra",
  "errors",
  "evaluate",
  "failures",
  "first",
  "foundry",
  "from",
  "function",
  "functions",
  "generic",
  "health",
  "identity",
  "increase",
  "index",
  "inference",
  "insufficientquota",
  "issues",
  "kind",
  "knowledge",
  "limiting",
  "manage",
  "managed",
  "mcp",
  "microsoft",
  "model",
  "models",
  "monitor",
  "monitoring",
  "onboard",
  "openai",
  "permissions",
  "principal",
  "project",
  "provider",
  "provision",
  "queries",
  "quota",
  "quotaexceeded",
  "quotas",
  "rate",
  "rbac",
  "regional",
  "register",
  "resource",
  "resources",
  "role",
  "search",
  "service",
  "services",
  "skill",
  "speech-to-text",
  "this",
  "troubleshooting",
]
`;
